Fix Developer Application Card layout
Updated CSS and HTML to fix the layout issues.

--- a/src/app/components/developer/apps/dev-apps.component.css
+++ b/src/app/components/developer/apps/dev-apps.component.css
@@ -26,6 +26,6 @@ section {
     flex-flow: row wrap;
     align-content: flex-start;
 }
-section > bo-dev-app {
+section > bo-dev-app-card {
     margin: 10px;
 }
